Get snapshot from recorded videos (#59)
* Get snapshot from recorded video (mp4 file)

* Add API endpoint to get picture

* Add tests for endpoint

* Add documentation for the endpoint

* Use the picture endpoint as a poster in playback
